# 1MLET_FASE5_DATATHON

./: .dockerignore  .gitignore  Dockerfile.etl  Dockerfile.jupyter  Dockerfile.model  Dockerfile.server  Dockerfile.streamlit  LICENSE  README.md  app.py  app_old.py  docker-compose.yml  eda.ipynb  eda_exploratory_data_analysis.ipynb  eda_exploratory_data_analysis_v2.ipynb  ingestion.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
ml/: Dockerfile.etl  docker-compose.yml  eda_exploratory_data_analysis.ipynb  pyproject.toml
ml/src/services/: downloader.py  file_handler.py
notebook/: eda_exploratory_data_analysis_v2.ipynb  lightfm_predictor_demo.ipynb  model_training.ipynb
server/: .env.docker  .env.example  README.md  pyproject.toml
server/.bruno/Article Recommendations/: Get Batch Recommendations.bru  Get Single User Recommendations.bru  bruno.json
server/app/: containers.py  main.py
server/app/core/: config.py
server/app/ml/: __init__.py  lightfm_predictor.py
server/app/ml/utils/: __init__.py  spark_session_factory.py
server/app/routers/: __init__.py
server/app/routers/v1/: predictions.py
server/app/schemas/prediction/: __init__.py  prediction.py
server/app/schemas/prediction/requests/: prediction_request.py
server/app/schemas/prediction/responses/: __init__.py  prediction_response.py
server/app/services/: model_service.py
server/tests/: conftest.py  test_predictions.py
server/tests/unit/: test_lightfm_predictor.py  test_model_service.py  test_predictions_router.py  test_spark_session_factory.py
src/: eda_exploratory_data_analysis.ipynb  ingestion.ipynb  main.py  pipeline_etl.py  pipeline_model.py  run.py  train.py  validate_embeddings.py
src/configs/: config.py
src/services/: advanced_features.py  downloader.py  feature_engineering.py  file_handler.py  model_monitoring.py  model_trainer.py  pre_process.py  prepare_lightfm_data.py  spark_session.py  text_processor.py  train_lightfm.py  transformers.py
src/utils/: logger.py
streamlit/: app copy.py  app.py
streamlit/pages/: model_monitoring.py
