[project]
name = "1mlet-fase5-datathon"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

# Define onde o código está localizado
packages = [{ include = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
gdown = "^5.2.0"
pyspark = "^3.5.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

